# server

./: .clang-format  .gitignore  CMakeLists.txt  build.sh  cmake-install.sh  main.cpp
devops/: KusManager.service  build.sh  cmake-install.sh  make_servis.sh  push_to_git.bat  remake.comands  server_restart.bat
source/: main.cpp
source/domain/: path.cpp
